<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_back_normal" />

        <com.odm.tool.soundmeter.SoundDiscView
            android:id="@+id/soundDiscView"
            android:layout_gravity="center_horizontal"
            android:layout_width="244dp"
            android:layout_height="258dp"
            android:background="@drawable/noise_disc"
            />

        <TextView
            android:id="@+id/display_volume_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/quiteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/volume_size_name1" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/indoorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/volume_size_name2" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/noisyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/volume_size_name3" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/harmfulTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/volume_size_name4" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/extremelyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/volume_size_name5" />
    </LinearLayout>
</ScrollView>